client/views/ipads/ipads.import.less
.grid-thumbnail {
	margin-top: 15px;
	margin-bottom: 15px;
}
.ipad-content {
	background: #455266;
	padding-top: 55px;
}
.slick-slide .image {
    padding: 15px;
}
.slick-slide img {
    display: block;
    width: 100%;
}

